--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "aos": "^2.3.4",
     "html-react-parser": "^1.4.12",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "^15.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.3.1",
     "swiper": "^8.1.4",
     "ua-parser-js": "^1.0.2"
@@ -25,10 +25,10 @@
     "@types/react-dom": "18.0.3",
     "@types/ua-parser-js": "^0.7.36",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.3.3",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.6.4"
+    "typescript": "^5.8.3"
   }
 }
